Update radio button options for decision makers

--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
               <div class="choices" data-name="hasDecision">
                 <label class="chip"><input type="radio" name="hasDecision" value="決済者" />決済者</label>
                 <label class="chip"><input type="radio" name="hasDecision" value="非決済者" />非決済者</label>
-                <label class="chip"><input type="radio" name="hasDecision" value="外国人" />外国人</label>
+                <label class="chip"><input type="radio" name="hasDecision" value="外人決裁者" />外人決裁者</label>
+                <label class="chip"><input type="radio" name="hasDecision" value="外人非決裁者" />外人非決裁者</label>
               </div>
             </div>
             <div>
